--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "node ./watch.js",
+    "watch": "node ./watch.js",
     "build": "yarn webpack --config webpack.config.dev.js && yarn webpack --config webpack.config.prod.js"
   },
   "devDependencies": {
@@ -23,5 +23,13 @@
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-fix-style-only-entries": "^0.6.1"
-  }
+  },
+  "browserslist": [
+    "last 3 version",
+    "not dead",
+    "iOS >= 9",
+    ">0.2%",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
