--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "sass-resources-loader": "^2.2.4",
+    "source-map-loader": "^3.0.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-fix-style-only-entries": "^0.6.1"
